--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,8 +25,10 @@ jobs:
         override: true
     - name: apt update
       run: sudo apt update
-    - name: Build
+    - name: Build-default
       run: cargo +nightly build --verbose
+    - name: Build-ron
+      run: cargo +nightly build --no-default-features --features ron-config --verbose
       
   clippy:
   
@@ -41,8 +43,10 @@ jobs:
         override: true
     - name: apt update
       run: sudo apt update
-    - name: Clippy
-      run: cargo clippy --all-targets --all-features
+    - name: Clippy-default
+      run: cargo clippy --all-targets
+    - name: Clippy-ron
+      run: cargo clippy --no-default-features --features ron-config --all-targets
 
   fmt:
     runs-on: ubuntu-latest
